--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "main": "index.js",
   "scripts": {
     "serve": "nodemon",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/qrai/MemoryDB.git"
   },
-  "keywords": ["database","in-memory","memory","store","queries","analytics"],
+  "keywords": [
+    "database",
+    "in-memory",
+    "memory",
+    "store",
+    "queries",
+    "analytics"
+  ],
   "author": "qrai",
   "license": "ISC",
   "bugs": {
@@ -19,8 +27,11 @@
   },
   "homepage": "https://github.com/qrai/MemoryDB#readme",
   "devDependencies": {
+    "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
+    "jest": "^29.0.3",
     "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
