--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "memorydb",
+  "name": "@datasco/memorydb",
   "version": "1.0.0",
   "description": "In-memory database with Queries, Event-handling, Analytics written in TypeScript",
   "main": "build/index.js",
