--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "In-memory database with Queries, Event-handling, Analytics written in TypeScript",
   "main": "build/index.js",
+  "types": "build/index.d.ts",
   "files": ["build"],
   "scripts": {
     "serve": "nodemon",
