--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@datasco/memorydb",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "In-memory database with Queries, Event-handling, Analytics written in TypeScript",
   "main": "build/index.js",
   "types": "build/index.d.ts",
-  "files": ["build"],
+  "files": [
+    "build"
+  ],
   "scripts": {
     "serve": "nodemon",
     "build": "npx tsc",
