--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "compress-json": "^2.1.2",
+    "csv-parser": "^3.0.0"
   }
 }
