--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "alasql": "^4.1.4",
     "compress-json": "^2.1.2",
     "csv-parser": "^3.0.0"
   }
